docs: mark 16c-2 shipped